--- a/client/Unix.TerminalMultiplexer.html
+++ b/client/Unix.TerminalMultiplexer.html
@@ -58,6 +58,12 @@
 
 <span class="cp"># 删除所有的会话</span>
 <span class="n">tmux</span> <span class="n">kill</span><span class="o">-</span><span class="n">server</span> 
+
+<span class="cp"># 剥离当前session</span>
+<span class="n">Ctrl</span><span class="o">+</span><span class="n">b</span> <span class="n">d</span>
+
+<span class="cp"># delete windows</span>
+<span class="n">Ctrl</span><span class="o">+</span><span class="n">b</span> <span class="o">&amp;</span>
 </pre></div>
 
 
@@ -138,6 +144,7 @@ iTerm2 可以通过 「Preferences -&gt; Profiles -&gt; Keyboard Behavior -&gt; 
 
 <h3 id="refernece">REFERNECE</h3>
 <p><a href="https://linuxize.com/post/getting-started-with-tmux/">tmux</a></p>
+<p><a href="https://tmuxcheatsheet.com">tmuxCheatSHeet</a></p>
 <p><a href="https://linuxize.com/post/how-to-use-linux-screen/">screen</a></p>
   
 </div>
@@ -151,7 +158,7 @@ iTerm2 可以通过 「Preferences -&gt; Profiles -&gt; Keyboard Behavior -&gt; 
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-18 22:14:15</p>
+        <p>Page Updated 2019-09-19 16:47:12</p>
       </div> <!-- end footer-right -->
     </div>
 
