--- a/ops/Ops.AnsiblePlaybookConcept.html
+++ b/ops/Ops.AnsiblePlaybookConcept.html
@@ -29,20 +29,20 @@
 </div>
 <div class="clearfix"></div>
 <div id="content">
-  <h2 id="ansible-playbook-concept">Ansible Playbook Concept</h2>
+  <h1 id="ansible-playbook-concept">Ansible Playbook Concept</h1>
 <blockquote>
 <p>剧本</p>
 </blockquote>
 <h3 id="core">Core：</h3>
 <ul>
-<li>Hosts：主机</li>
-<li>Tasks：任务列表</li>
-<li>Variables：变量</li>
-<li>Templates：包含了模板语法的文本文件；</li>
-<li>Handlers：由特定条件触发的任务；</li>
+<li>hosts：主机</li>
+<li>tasks：任务列表</li>
+<li>vars：变量优先级高于defaults目录中的变量</li>
+<li>templates：包含了模板语法的文本文件；</li>
+<li>handlers：由特定条件触发的任务；</li>
 <li>meta:  特殊任务，影响ansible内部执行或状态</li>
-<li>Roles：角色 实现代码复用</li>
-<li>Default：为当前角色定义默认变量使用此目录，包含一个main.yml</li>
+<li>roles：角色 实现代码复用</li>
+<li>defaults：为当前角色定义默认变量使用此目录，包含一个main.yml</li>
 </ul>
 <p><strong>语法检查</strong></p>
 <div class="hlcode"><pre><span class="cp"># 语法验证</span>
@@ -81,13 +81,13 @@
 </pre></div>
 
 
-<h3 id="2playbook">2.playbook 逻辑控制语句</h3>
+<h2 id="2playbook">2.playbook 逻辑控制语句</h2>
 <ul>
 <li>when：条件判断语句，类似shell if</li>
 <li>loop：循环语句，类似shell while</li>
 <li>block：把几个tasks组成一块代码，针对异常处理操作</li>
 </ul>
-<h3 id="3-special-variables">3.魔术变量 <a href="https://docs.ansible.com/ansible/latest/reference_appendices/special_variables.html">Special Variables</a></h3>
+<h2 id="3-special-variables">3.魔术变量 <a href="https://docs.ansible.com/ansible/latest/reference_appendices/special_variables.html">Special Variables</a></h2>
 <p><strong>1.hostvars</strong></p>
 <blockquote>
 <p>hostvars 使用当前主机获取其他主机变量，包括主机中获取额facts，需要先获取其他主机的Gathering Facts信息才能捕获其对应的内置变量</p>
@@ -144,6 +144,119 @@
 <span class="cp"># {{ groups.one }}</span>
 <span class="n">ansible</span> <span class="o">-</span><span class="n">i</span> <span class="o">/</span><span class="n">etc</span><span class="o">/</span><span class="n">ansible</span><span class="o">/</span><span class="n">hosts</span> <span class="n">localhost</span> <span class="o">-</span><span class="n">m</span> <span class="n">debug</span> <span class="o">-</span><span class="n">a</span> <span class="s">&quot;var=hostvars[groups.etcd[0]]&quot;</span>
 </pre></div>
+
+
+<h2 id="jinja2">Jinja2 模板</h2>
+<p><strong>语法</strong></p>
+<p>{{ 表达式(变量，运算表达式，比较表达式) }}</p>
+<p>{% 控制语句(if，for) %}</p>
+<p>{# 注释(文件渲染后，注释不会生成) #}</p>
+<div class="hlcode"><pre><span class="cp"># 比较</span>
+<span class="p">{{</span> <span class="n">test</span> <span class="n">is</span> <span class="n">defined</span><span class="p">}}</span>
+<span class="p">{{</span> <span class="err">&#39;</span><span class="o">/</span><span class="n">data</span><span class="err">&#39;</span> <span class="n">is</span> <span class="n">exists</span> <span class="p">}}</span>
+<span class="cp"># 变量</span>
+<span class="p">[</span><span class="n">client</span><span class="p">]</span>
+<span class="n">port</span> <span class="o">=</span> <span class="p">{{</span> <span class="n">mysql_port</span> <span class="p">}}</span>
+<span class="n">socket</span> <span class="o">=</span> <span class="p">{{</span> <span class="n">mysql_socket</span> <span class="p">}}</span>
+<span class="cp"># 运算</span>
+<span class="p">{{</span> <span class="p">(</span><span class="mi">2</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">)</span> <span class="n">and</span> <span class="p">(</span><span class="mi">1</span> <span class="o">&gt;</span> <span class="mi">2</span><span class="p">)</span> <span class="p">}}</span>
+</pre></div>
+
+
+<p>控制语句</p>
+<div class="hlcode"><pre><span class="x"># if end</span>
+<span class="cp">{%</span> <span class="k">if</span> <span class="p">条件</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">endif</span> <span class="cp">%}</span><span class="x"></span>
+
+<span class="x"># if else</span>
+<span class="cp">{%</span> <span class="k">if</span> <span class="p">条件</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">else</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">endif</span> <span class="cp">%}</span><span class="x"></span>
+
+<span class="x"># if else if</span>
+<span class="cp">{%</span> <span class="k">if</span> <span class="p">条件</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">elif</span> <span class="p">条件</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">elif</span> <span class="p">条件</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">endif</span> <span class="cp">%}</span><span class="x"></span>
+
+<span class="x"># e.g</span>
+<span class="cp">{%</span> <span class="k">for</span> <span class="nv">i</span> <span class="k">in</span> <span class="o">[</span><span class="m">1</span><span class="o">,</span><span class="m">2</span><span class="o">,</span><span class="m">3</span><span class="o">,</span><span class="m">4</span><span class="o">,</span><span class="m">5</span><span class="o">]</span> <span class="cp">%}</span><span class="x"></span>
+<span class="cp">{{</span> <span class="nv">i</span> <span class="cp">}}</span><span class="x"></span>
+<span class="cp">{%</span> <span class="k">endfor</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">end: </span>
+<span class="x">1</span>
+<span class="x">2</span>
+<span class="x">3</span>
+<span class="x">4</span>
+<span class="x">5</span>
+
+<span class="x"># 带有 &quot;-&quot; 符号</span>
+<span class="cp">{%</span> <span class="k">for</span> <span class="nv">i</span> <span class="k">in</span> <span class="o">[</span><span class="m">1</span><span class="o">,</span><span class="m">2</span><span class="o">,</span><span class="m">3</span><span class="o">,</span><span class="m">4</span><span class="o">,</span><span class="m">5</span><span class="o">]</span> -<span class="cp">%}</span><span class="x"></span>
+<span class="cp">{{</span> <span class="nv">i</span> <span class="cp">}}</span><span class="x"></span>
+<span class="cp">{%</span>- <span class="k">endfor</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">end: 12345</span>
+
+<span class="x"># 带空格</span>
+<span class="cp">{%</span> <span class="k">for</span> <span class="nv">i</span> <span class="k">in</span> <span class="o">[</span><span class="m">1</span><span class="o">,</span><span class="m">2</span><span class="o">,</span><span class="m">3</span><span class="o">,</span><span class="m">4</span><span class="o">,</span><span class="m">5</span><span class="o">]</span> -<span class="cp">%}</span><span class="x"></span>
+<span class="cp">{{</span> <span class="nv">i</span> <span class="cp">}}{{</span><span class="s1">&#39;&#39;</span><span class="cp">}}</span><span class="x"></span>
+<span class="cp">{%</span>- <span class="k">endfor</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">end: 1 2 3 4 5</span>
+
+<span class="x"># 波浪符号&quot;~&quot; 将字符串连接一起</span>
+<span class="cp">{%</span> <span class="k">for</span> <span class="nv">i</span> <span class="k">in</span> <span class="o">[</span><span class="m">1</span><span class="o">,</span><span class="m">2</span><span class="o">,</span><span class="m">3</span><span class="o">,</span><span class="m">4</span><span class="o">,</span><span class="m">5</span><span class="o">]</span> -<span class="cp">%}</span><span class="x"></span>
+<span class="cp">{{</span> <span class="nv">i</span><span class="o">~</span><span class="s1">&#39;&#39;</span><span class="cp">}}</span><span class="x"></span>
+<span class="cp">{%</span>- <span class="k">endfor</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">end: 1 2 3 4 5</span>
+</pre></div>
+
+
+<p>转义</p>
+<div class="hlcode"><pre><span class="p">{{</span><span class="err">&#39;</span><span class="p">{{</span><span class="err">&#39;</span><span class="p">}}</span>  <span class="o">--</span> <span class="o">&gt;</span>  <span class="p">{{</span>
+<span class="p">{{</span><span class="err">&#39;</span><span class="p">{{</span><span class="n">string</span><span class="p">}}</span><span class="err">&#39;</span><span class="p">}}</span> <span class="o">---&gt;</span> <span class="p">{{</span><span class="n">string</span><span class="p">}}</span>
+
+<span class="cp"># 不被jinja2解析</span>
+<span class="p">{</span><span class="o">%</span> <span class="n">raw</span> <span class="o">%</span><span class="p">}</span>
+ <span class="p">{{</span> <span class="n">test</span> <span class="p">}}</span>
+ <span class="p">{</span><span class="o">%</span> <span class="n">hello</span> <span class="o">%</span><span class="p">}</span>
+ <span class="p">{</span><span class="err">#</span> <span class="n">world</span> <span class="err">#</span><span class="p">}</span>
+<span class="p">{</span><span class="o">%</span> <span class="n">endraw</span> <span class="o">%</span><span class="p">}</span>
+<span class="nl">end:</span>
+ <span class="p">{{</span> <span class="n">test</span> <span class="p">}}</span>
+ <span class="p">{</span><span class="o">%</span> <span class="n">hello</span> <span class="o">%</span><span class="p">}</span>
+ <span class="p">{</span><span class="err">#</span> <span class="n">world</span> <span class="err">#</span><span class="p">}</span>
+</pre></div>
+
+
+<p>宏相关</p>
+<div class="hlcode"><pre><span class="p">{</span><span class="o">%</span> <span class="n">macro</span> <span class="n">func</span><span class="p">()</span> <span class="o">%</span><span class="p">}</span>
+<span class="p">{</span><span class="o">%</span> <span class="n">endmacro</span> <span class="o">%</span><span class="p">}</span>
+</pre></div>
+
+
+<p>嵌套</p>
+<div class="hlcode"><pre><span class="cp"># 1.j2</span>
+<span class="p">{</span><span class="o">%</span><span class="n">include</span> <span class="err">&#39;</span><span class="mf">2.</span><span class="n">j2</span><span class="err">&#39;</span><span class="o">%</span><span class="p">}</span>
+<span class="n">test</span>
+<span class="p">..</span>
+
+<span class="cp"># 2.j2</span>
+<span class="p">{</span><span class="o">%</span><span class="k">for</span> <span class="n">in</span> <span class="n">in</span> <span class="n">range</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span><span class="o">%</span><span class="p">}</span>
+<span class="p">{{</span><span class="n">i</span><span class="p">}}</span>
+<span class="p">{</span><span class="o">%</span><span class="n">endfor</span><span class="o">%</span><span class="p">}</span>
+</pre></div>
+
+
+<p>继承</p>
+<div class="hlcode"><pre><span class="cp">{%</span> <span class="k">block</span> <span class="nv">test</span> <span class="cp">%}</span><span class="x"></span>
+<span class="x">...</span>
+<span class="cp">{%</span> <span class="k">endblock</span> <span class="nv">test</span> <span class="cp">%}</span><span class="x"></span>
+</pre></div>
   
 </div>
     </div>
@@ -156,7 +269,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-18 22:14:15</p>
+        <p>Page Updated 2019-09-19 16:47:12</p>
       </div> <!-- end footer-right -->
     </div>
 
