Update output documentation

--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;WebServer/Openresty&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./web/WebServer.Openresy.html">Openresty</a>&nbsp;&#47;&nbsp;
+                  <a href="./web/WebServer.OpenrestyModsecurity.html">ModSecurity</a>&nbsp;&#47;&nbsp;
+                  <a href="./web/WebServer.OpenrestyDeploy.html">Openresty</a>&nbsp;&#47;&nbsp;
                   <a href="./web/WebServer.OpenrestyWAF.html">OpenrestyWAF</a>
                 </div>
               </div>
@@ -341,7 +342,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-19 16:47:12</p>
+        <p>Page Updated 2019-09-20 11:56:16</p>
       </div> <!-- end footer-right -->
     </div>
 
