Update output documentation

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                 <div class="coll_list">
                   <a href="./os/Container.DockerConf.html">DockerConf</a>&nbsp;&#47;&nbsp;
                   <a href="./os/Container.DockerFile.html">DockerFile</a>&nbsp;&#47;&nbsp;
-                  <a href="./os/Container.DockerInstall.html">DockerInstall</a>
+                  <a href="./os/Container.DockerInstall.html">DockerInstall</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Container.DockerHarbor.html">Harbor</a>
                 </div>
               </div>
           </li>  
@@ -342,7 +343,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-20 11:56:16</p>
+        <p>Page Updated 2019-09-21 20:45:45</p>
       </div> <!-- end footer-right -->
     </div>
 
