--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;CNCF/Prom&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./cncf/CNCF.PrometheusConcept.html">Prometheus.Concept</a>
+                  <a href="./cncf/CNCF.PromConcept.html">Prom.Concept</a>&nbsp;&#47;&nbsp;
+                  <a href="./cncf/CNCF.PromExporter.html">Prom.Exporter</a>
                 </div>
               </div>
           </li>
@@ -363,7 +364,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-25 22:39:26</p>
+        <p>Page Updated 2019-09-28 21:55:11</p>
       </div> <!-- end footer-right -->
     </div>
 
