Update output documentation

--- a/index.html
+++ b/index.html
@@ -302,20 +302,21 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;Storage/Redis&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;Storage/Filesystem&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./storage/Storage.RedisCmd.html">RedisCMD</a>&nbsp;&#47;&nbsp;
-                  <a href="./storage/Storage.RedisConcept.html">RedisConcept</a>&nbsp;&#47;&nbsp;
-                  <a href="./storage/Storage.RedisDeploy.html">RedisDeploy</a>
+                  <a href="./storage/Storage.NfsDeploy.html">NFS</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.RsyncOs.html">RsyncOs</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.FSSersync.html">SersyncInotify</a>
                 </div>
               </div>
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;Storage/Filesystem&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;Storage/Redis&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./storage/Storage.RsyncOs.html">RsyncOs</a>&nbsp;&#47;&nbsp;
-                  <a href="./storage/Storage.FSSersync.html">SersyncInotify</a>
+                  <a href="./storage/Storage.RedisCmd.html">RedisCMD</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.RedisConcept.html">RedisConcept</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.RedisDeploy.html">RedisDeploy</a>
                 </div>
               </div>
           </li>
@@ -364,7 +365,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-28 21:55:11</p>
+        <p>Page Updated 2019-09-30 14:39:58</p>
       </div> <!-- end footer-right -->
     </div>
 
