--- a/storage/Storage.DiskLvm.html
+++ b/storage/Storage.DiskLvm.html
@@ -70,7 +70,8 @@ Disk-&gt;PV-&gt;VG-&gt;LV</p>
 </pre></div>
 
 
-<p><strong>3.创建PV</strong></p>
+<h3 id="pv">PV(物理卷)</h3>
+<p><strong>3.创建PV(物理卷)</strong></p>
 <div class="hlcode"><pre><span class="cp"># 创建</span>
 <span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="n">lib</span><span class="p">]</span><span class="err">#</span> <span class="n">pvcreate</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">sda4</span> 
   <span class="n">Physical</span> <span class="n">volume</span> <span class="s">&quot;/dev/sda4&quot;</span> <span class="n">successfully</span> <span class="n">created</span><span class="p">.</span>
@@ -83,6 +84,7 @@ Disk-&gt;PV-&gt;VG-&gt;LV</p>
 </pre></div>
 
 
+<h3 id="vg">VG(卷组)</h3>
 <p><strong>4.添加VG</strong></p>
 <div class="hlcode"><pre><span class="cp"># 将/dev/sda4加入 VG centos</span>
 <span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="n">audit</span><span class="p">]</span><span class="err">#</span> <span class="n">vgextend</span> <span class="n">centos</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">sda4</span>
@@ -94,10 +96,15 @@ Disk-&gt;PV-&gt;VG-&gt;LV</p>
 
 <span class="cp"># 查看</span>
 <span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="n">lib</span><span class="p">]</span><span class="err">#</span> <span class="n">vgdisplay</span> 
+
+<span class="cp"># 创建VG</span>
+<span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="o">~</span><span class="p">]</span><span class="err">#</span> <span class="n">vgcreate</span> <span class="n">data</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">sdb1</span>
+  <span class="n">Volume</span> <span class="n">group</span> <span class="s">&quot;data&quot;</span> <span class="n">successfully</span> <span class="n">created</span>
 </pre></div>
 
 
-<p><strong>5.扩容LV</strong></p>
+<h3 id="lv">LV(逻辑卷)</h3>
+<p><strong>6.扩容lv</strong></p>
 <div class="hlcode"><pre><span class="cp"># 1.查看</span>
 <span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="n">audit</span><span class="p">]</span><span class="err">#</span> <span class="n">lvs</span>
   <span class="n">LV</span>   <span class="n">VG</span>     <span class="n">Attr</span>       <span class="n">LSize</span>  <span class="n">Pool</span> <span class="n">Origin</span> <span class="n">Data</span><span class="o">%</span>  <span class="n">Meta</span><span class="o">%</span>  <span class="n">Move</span> <span class="n">Log</span> <span class="n">Cpy</span><span class="o">%</span><span class="n">Sync</span> <span class="n">Convert</span>
@@ -126,9 +133,10 @@ Disk-&gt;PV-&gt;VG-&gt;LV</p>
 
 
 <p><strong>7.创建lv</strong></p>
-<div class="hlcode"><pre><span class="cp"># 1.创建100G </span>
-<span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">ops</span> <span class="o">/</span><span class="p">]</span><span class="err">#</span> <span class="n">lvcreate</span> <span class="o">-</span><span class="n">L</span> <span class="mi">100</span><span class="n">G</span> <span class="o">-</span><span class="n">n</span> <span class="n">data</span> <span class="n">centos_alpha</span><span class="o">-</span><span class="n">docker</span><span class="o">-</span><span class="n">os</span>
-  <span class="n">Logical</span> <span class="n">volume</span> <span class="s">&quot;data&quot;</span> <span class="n">created</span><span class="p">.</span>
+<div class="hlcode"><pre><span class="cp"># lvcreate -L 1023G -n centos-data data</span>
+<span class="cp"># 创建1023G的 centos-data lv</span>
+<span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">ops</span><span class="o">-</span><span class="mo">05</span> <span class="o">~</span><span class="p">]</span><span class="err">#</span> <span class="n">lvcreate</span> <span class="o">-</span><span class="n">n</span> <span class="n">centos</span><span class="o">-</span><span class="n">data</span> <span class="o">--</span><span class="n">size</span> <span class="mi">1023</span><span class="n">G</span> <span class="n">data</span>
+  <span class="n">Logical</span> <span class="n">volume</span> <span class="s">&quot;centos-data&quot;</span> <span class="n">created</span><span class="p">.</span>
 
 <span class="cp"># 2.格式化lv并挂载</span>
 <span class="p">[</span><span class="n">root</span><span class="err">@</span><span class="n">alpha</span><span class="o">-</span><span class="n">docker</span><span class="o">-</span><span class="n">os</span> <span class="o">/</span><span class="p">]</span><span class="err">#</span> <span class="n">mkfs</span><span class="p">.</span><span class="n">xfs</span> <span class="o">/</span><span class="n">dev</span><span class="o">/</span><span class="n">centos_alpha</span><span class="o">-</span><span class="n">docker</span><span class="o">-</span><span class="n">os</span><span class="o">/</span><span class="n">data</span>
@@ -183,7 +191,7 @@ Disk-&gt;PV-&gt;VG-&gt;LV</p>
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-28 21:55:11</p>
+        <p>Page Updated 2019-09-30 14:39:58</p>
       </div> <!-- end footer-right -->
     </div>
 
